--- a/src/functional_components/ItemList/ItemList.module.scss
+++ b/src/functional_components/ItemList/ItemList.module.scss
@@ -18,7 +18,7 @@
     }
 }
 
-@media (max-width: $screen_s) {
+@media (max-width: $screen_xs) {
     .listContainer {
         grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
         grid-gap: 20px 20px;
