--- a/src/functional_components/Layout/Layout.module.scss
+++ b/src/functional_components/Layout/Layout.module.scss
@@ -62,7 +62,7 @@
 .content {
     grid-area: content;
     -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
