--- a/src/functional_components/ProfileView/ProfileView.module.scss
+++ b/src/functional_components/ProfileView/ProfileView.module.scss
@@ -169,10 +169,6 @@ svg:hover {
     );
 }
 
-.addButton:hover {
-    background-color: $dark_green;
-}
-
 .addButton {
     border: solid $light_green 5px;
     color: #fff;
@@ -191,8 +187,14 @@ svg:hover {
     width: 100%;
 }
 
-.removeButton:hover {
-    cursor: pointer;
+@media (min-width: $screen_m) {
+    .addButton:hover {
+        background-color: $dark_green;
+    }
+    
+    .removeButton:hover {
+        cursor: pointer;
+    }
 }
 
 @media (max-width: $screen_m) {
@@ -201,12 +203,15 @@ svg:hover {
         grid-template-rows: 1fr;
         width: 100%;
         --webkit-overflow-scrolling: touch;
+        height: calc(100vh - 70px);
+        border-radius: initial;
         overflow-y: auto;
     }
 
     .profileContainer {
         justify-content: flex-start;
-        margin-top: 26px;
+        margin-top: 1em;
+        padding-bottom: 4em;
     }
 
     .headContainer {
